base/app-musicassistant.yaml
# This manifest install Music Assistant container and required resources

# Ingress is for UI
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicassistant
spec:
  tls:
  - secretName: musicassistant-certs
    hosts:
    - musicassistant.kotimme.cc
  rules:
  - host: musicassistant.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: musicassistant
            port:
              name: ui

# Service's type is "loadBalancer" so that players we have IP in LAN. This allows players to access stream have access to Musicassistants tcp-port.
---
apiVersion: v1
kind: Service
metadata:
    name: musicassistant
spec:
    ports:
      - name: ui
        port: 80
        targetPort: ui
      - name: tcp
        port: 8098
        targetPort: tcp
    selector:
        app: musicassistant
    type: LoadBalancer
    loadBalancerIP: 192.168.80.3

# Container has been deployed as StatefulSet with replicas-amount 1 as there can be only one container and contaner has persistent storage.
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: musicassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicassistant
  serviceName: "musicassistant"
  template:
    metadata:
      labels:
        app: musicassistant
    spec:
      securityContext:
        fsGroup: 1978
      containers:
      - name: musicassistant
        image: ghcr.io/music-assistant/server:latest
        imagePullPolicy: IfNotPresent
#        securityContext:
#          appArmorProfile:
#            type: Unconfined
#          capabilities:
#            add:
#              - NET_ADMIN
#              - NET_RAW
#              - NET_BROADCAST
#              - SYS_ADMIN
#              - DAC_READ_SEARCH
        ports:
        - name: ui
          containerPort: 8095
        - name: tcp
          containerPort: 8098
        volumeMounts:
        - name: dir
          mountPath: 	/data
          subPath: musicassistant
#      imagePullSecrets: 
#        - name: ghcr.io
      volumes:
        - name: dir
          persistentVolumeClaim:
           claimName: nfs
